--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
+    "favicons": "^6.2.1",
+    "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "prop-types": "^15.7.2",
