--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -16,9 +16,9 @@ jobs:
           node-version: 14
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
       - name: Build frontend
-        run: npm run build --if-present
+        run: yarn run build --if-present
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
