--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Build frontend
-        run: yarn run build --if-present
+        run: yarn run build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
