--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.4",
+    "@next/mdx": "^13.4.19",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "gray-matter": "^4.0.3",
-    "i18next": "^22.4.10",
-    "next": "13.2.3",
+    "i18next": "^23.5.1",
+    "next": "13.4.19",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.2.0",
-    "rehype-sanitize": "^5.0.1",
-    "rehype-stringify": "^9.0.3",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
+    "react-i18next": "^13.2.2",
     "unified": "^10.1.2"
   },
   "devDependencies": {
