--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^23.5.1",
     "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
+    "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
